// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Button] [ThemeType.Light] renders without crashing 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
  onPress={[Function]}
  testID="btn"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#069ccd",
          "borderColor": "#069ccd",
          "borderRadius": 4,
          "borderWidth": 2,
          "height": 52,
          "justifyContent": "center",
          "width": 320,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 14,
          },
        ]
      }
    />
  </View>
</TouchableOpacity>
`;

exports[`[Button] should render [ThemeType.Dark] without crashing 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
  onPress={[Function]}
  testID="btn"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#069ccd",
          "borderColor": "#069ccd",
          "borderRadius": 4,
          "borderWidth": 2,
          "height": 52,
          "justifyContent": "center",
          "width": 320,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 14,
          },
        ]
      }
    />
  </View>
</TouchableOpacity>
`;

exports[`[Button] should render [isDisabled] status without crashing 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "rgb(224,224,224)",
        "borderColor": "rgb(200, 200, 200)",
        "borderRadius": 4,
        "borderWidth": 2,
        "height": 52,
        "justifyContent": "center",
        "width": 320,
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#969696",
          "fontSize": 14,
        },
      ]
    }
  />
</View>
`;

exports[`[Button] should render [isLoading] status without crashing 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#069ccd",
        "borderColor": "#069ccd",
        "borderRadius": 4,
        "borderWidth": 2,
        "height": 52,
        "justifyContent": "center",
        "width": 320,
      },
    ]
  }
>
  <ActivityIndicator
    animating={true}
    color="white"
    hidesWhenStopped={true}
    size="small"
  />
</View>
`;
